# Q-SMEC-Command-Center

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  SURGICAL_AUDIT_20260409.md  _KB_INDEX.md  pyproject.toml
.claude/worktrees/pedantic-hodgkin/: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  pyproject.toml
.claude/worktrees/pedantic-hodgkin/.github/workflows/: ci.yml
.claude/worktrees/pedantic-hodgkin/backend/: config.py  database.py  main.py  seed.py
.claude/worktrees/pedantic-hodgkin/backend/jobs/: email_sync.py  note_export.py  repo_health.py
.claude/worktrees/pedantic-hodgkin/backend/models/: __init__.py  client.py  email_cache.py  note.py  pipeline.py  task.py
.claude/worktrees/pedantic-hodgkin/backend/routers/: ai_router.py  clients.py  emails.py  notes.py  overview.py  pipeline.py  repos.py
.claude/worktrees/pedantic-hodgkin/backend/services/: ai_service.py  email_triage.py  file_bridge.py  github_service.py  gmail_service.py  model_router.py
.claude/worktrees/pedantic-hodgkin/bridge/: README.md
.claude/worktrees/pedantic-hodgkin/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
.claude/worktrees/pedantic-hodgkin/frontend/src/: App.jsx  api.js
.claude/worktrees/pedantic-hodgkin/frontend/src/components/: Badge.jsx  Card.jsx  KPICard.jsx  Layout.jsx  ProgressBar.jsx
.claude/worktrees/pedantic-hodgkin/frontend/src/pages/: Clients.jsx  CommandCenter.jsx  EmailTriage.jsx  Notes.jsx  Overview.jsx  Pipeline.jsx  Repos.jsx
.claude/worktrees/pedantic-hodgkin/frontend/src/styles/: globals.css
.claude/worktrees/pedantic-hodgkin/scripts/: deploy.sh  dev.sh  setup.sh
.githooks/: pre-commit
.github/workflows/: ci.yml
backend/: config.py  database.py  main.py  seed.py
backend/jobs/: agent_digest.py  email_sync.py  note_export.py  repo_health.py
backend/models/: __init__.py  client.py  email_cache.py  email_feedback.py  note.py  pipeline.py  task.py
backend/routers/: agent.py  ai_router.py  clients.py  emails.py  notes.py  overview.py  pipeline.py  (+1 more)
bridge/: README.md
frontend/: index.html  package-lock.json  package.json  qsmec-unified-dashboard.html  tailwind.config.js
scripts/: Start-CommandCenter.ps1  deploy.sh  dev.sh  setup.sh  start-server.sh  stop-server.sh
(+29 files in other folders)
