[project]
name = "qsmec-command-center"
version = "2.0.0"
description = "Q-SMEC Command Center — unified operational hub for NIKET NA LLC"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "sqlmodel>=0.0.16",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.120",
    "pygithub>=2.3",
    "anthropic>=0.50",
    "google-genai>=1.0",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "aiosqlite>=0.20",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.3",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
